Changes to responsive design code - improve alignment of footer by removing padding and change of div element in travel page width to ensure contents aren't hidden on smaller screen sizes

--- a/eat.html
+++ b/eat.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Edinburgh travel and entertainment advice">
     <meta name="keywords" content="edinburgh, scotland, travel, events, resturants, bars">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Edinburgh travel</title>
+    <title>Love Edinburgh</title>
 </head>
 
 <body>
