--- a/newsletter.html
+++ b/newsletter.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Edinburgh travel and entertainment advice">
     <meta name="keywords" content="edinburgh, scotland, travel, events, resturants, bars">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Edinburgh travel</title>
+    <title>Love Edinburgh</title>
 </head>
 
 <body>
