Removal of unnessary aria-label for div's in events, home and travel page and further text additions to the readme file

--- a/events.html
+++ b/events.html
@@ -46,7 +46,7 @@
         </header>
     <!-- main content of events page -->
     <section id="events-outer">
-        <div id="events-background" role="img" aria-label="People standing in theatre">
+        <div id="events-background">
             <div id="events-fringe">
                 <h2>Edinburgh Festival Fringe</h2>
                 <p>Edinburgh Festival Fringe happens every August and hosts a wealth of theatre, comedy and circus
