--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </header>
     <!-- main content of home page -->
     <section id="hero-outer">
-        <div id="hero-image" role="img" aria-label="View of Edinburgh with clock tower in sight">
+        <div id="hero-image">
             <div id="intro-text">
                 <h2>Why visit Edinburgh?</h2>
                 <p>Edinburgh is an old historic city located in Southeastern Scotland with many historical landmarks and
