--- a/newsletter.html
+++ b/newsletter.html
@@ -46,7 +46,7 @@
         </header>
     <!-- newsletter sign up form -->
     <section>
-        <div id="form-image" role="img" aria-label="View of concernt stage from the perspective of a member of the audience">
+        <div id="form-image">
             <div id="form-text-container">
                 <form method="POST" action="https://formdump.codeinstitute.net/">
                     <div>
