--- a/travel.html
+++ b/travel.html
@@ -47,8 +47,7 @@
        
     <!-- main content of travel adivce page -->
     <section id="travel-outer">
-        <div id="edin-travel" role="img"
-            aria-label="Edinburgh view from princes street with pedestrians and bus in background">
+        <div id="edin-travel">
             <div id="travel-container">
                 <div id="travel-text">
                     <h2>Travelling to Edinburgh</h2>
