Spell check and insertion of up-to-date screen shot on events page

--- a/eat.html
+++ b/eat.html
@@ -58,13 +58,13 @@
                 selection so you can enjoy a glass with your oysters by the water.</p>
             <h2>The Dragonfly</h2>
             <p>Fancy a cocktail? Why not head down to The Dragonfly which serves many of the old classics such as
-                espresso martini or novelities such as rum cocktails topped with italian meringue.</p>
+                espresso martini or novelties such as rum cocktails topped with italian meringue.</p>
             <h2>Mother India</h2>
             <p>Mother India is an old favourite for Edinburgh locals and tourists located in the Newington area of
                 Edinburgh. It offers many favourite indian dishes in small plates so everyone can share.</p>
             <h2>Kampong Ah Lee</h2>
-            <p>Another favourite for Edinburgh locals - offering delicous malaysian food including roti canai and laska
-                soup. This resturant also sports an extensive bubble tea menu. Like Mother India, this wee gem is
+            <p>Another favourite for Edinburgh locals - offering delicious malaysian food including roti canai and laska
+                soup. This restaurant also sports an extensive bubble tea menu. Like Mother India, this wee gem is
                 located in the Newington area of Edinburgh.</p>
         </div>
         </div>
