--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     things to do for all age groups.
                     It is the Capital of Scotland and is home to the Edinburgh castle, a popular tourist destination for
                     many people round the world. Love Edinburgh is here to provide recommendations of the best
-                    resturants and events to visit in and around Edinburgh.</p>
+                    restaurant and events to visit in and around Edinburgh.</p>
             </div>
         </div>
     </section>
