--- a/newsletter.html
+++ b/newsletter.html
@@ -50,7 +50,7 @@
             <div id="form-text-container">
                 <form method="POST" action="https://formdump.codeinstitute.net/">
                     <div>
-                        <h2>Sign up to our newsletter for weekly updates on events and resturant offers in Edinburgh
+                        <h2>Sign up to our newsletter for weekly updates on events and restaurant offers in Edinburgh
                         </h2>
                     </div>
                     <br>
