--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h2>Why visit Edinburgh?</h2>
                 <p>Edinburgh is an old historic city located in Southeastern Scotland with many historical landmarks and
                     things to do for all age groups.
-                    It is the Capital of Scotland and is home to the Edinburgh castle, a popular tourist destination for
+                    It is the Capital of Scotland and is home to Edinburgh castle, a popular tourist destination for
                     many people round the world. Love Edinburgh is here to provide recommendations of the best
                     restaurant and events to visit in and around Edinburgh.</p>
             </div>
